--- a/GroupExpenseWeb/src/main/webapp/WEB-INF/web.xml
+++ b/GroupExpenseWeb/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,25 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
 		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-
+    <context-param>
+        <param-name>contextClass</param-name>
+        <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+    </context-param>
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>com.mayuran19.groupExpense.web.config.WebAppConfig</param-value>
+    </context-param>
     <servlet>
         <servlet-name>services</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextClass</param-name>
+            <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+        </init-param>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>com.mayuran19.groupExpense.web.config.WebServicesServletConfig</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     
