--- a/build.gradle
+++ b/build.gradle
@@ -13,5 +13,6 @@ subprojects {
 
 	dependencies {
 		compile 'ch.qos.logback:logback-classic:1.1.3'
+		compile 'com.fasterxml.jackson.core:jackson-databind:2.6.4'
 	}
 }
