--- a/GroupExpenseCore/build.gradle
+++ b/GroupExpenseCore/build.gradle
@@ -7,5 +7,8 @@ repositories {
 }
 
 dependencies {
-	compile 'ch.qos.logback:logback-classic:1.1.3'
+    compile 'org.springframework:spring-context:4.2.4.RELEASE'
+    //compile 'org.springframework:spring-core:4.2.4.RELEASE'
+    //compile 'org.springframework:spring-beans:4.2.4.RELEASE'
+    compile 'ch.qos.logback:logback-classic:1.1.3'
 }
